compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__echo__multiple_echos_inside_expression.snap
---
source: compiler-core/src/erlang/tests/echo.rs
expression: "\npub fn main() {\n  echo 1\n  echo 2\n}\n"
---
----- SOURCE CODE

pub fn main() {
  echo 1
  echo 2
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    echo(1, nil, ~"project/test/my/mod.gleam", 3),
    echo(2, nil, ~"project/test/my/mod.gleam", 4).

% ...omitted echo code...
